<resources>
    <string name="app_name">App GasEta</string>
    <string name="txt_hint_edit_primeiro_nome">Gasolina X Etanol</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_matricula">Matricula</string>
    <string name="txt_hint_edit_cpf">CPF</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_hint_edit_etanol">Etanol</string>
    <string name="txt_hint_edit_Gasolina">Gasolina</string>
    <string name="txt_hint_edit_gasolina">Gasolina</string>
</resources>