<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"

                android:text="GásEta"
                android:textSize="20sp"
                app:barrierMargin="10dp"
                app:layout_marginBaseline="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/editGasolina"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="numberSigned|textPersonName|numberDecimal"
                    android:hint="@string/txt_hint_edit_gasolina"
                    app:layout_marginBaseline="10dp" />

                <EditText
                    android:id="@+id/editEtanol"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_edit_etanol"
                    android:inputType="numberSigned|textPersonName|numberDecimal" />


            </LinearLayout>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="18dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#20b2aa"
                android:backgroundTintMode="add"
                android:text="Calcular">

            </Button>


            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp"
                android:text=""
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/txtListaSpinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="Lista Spinner"
                android:textSize="15dp"
                />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"

                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="#20b2aa"
                    android:backgroundTintMode="add"
                    android:text="@string/txt_button_limpar" />

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="#20b2aa"
                    android:backgroundTintMode="add"
                    android:enabled="false"
                    android:text="@string/txt_button_salvar" />
            </LinearLayout>

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:backgroundTint="#00ced1"
                android:text="@string/txt_button_finalizar"
                app:rippleColor="#00ced1"
                app:strokeColor="#00ced1" />




        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>